# kubi.zone

./: 404.html  Cargo.toml  Dockerfile  README.md  index.html  justfile  search_index.en.js  sitemap.xml
.github/workflows/: rust.yaml  site.yml
charts/kubizone/: Chart.yaml  values.yaml
charts/kubizone/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  kubizone-deployment.yaml  kubizone-sa.yaml  serviceaccount.yaml  zonefile-deployment.yaml  zonefile-sa.yaml
charts/kubizone/templates/tests/: test-connection.yaml
charts/zonefile/: Chart.yaml  values.yaml
charts/zonefile-coredns/: Chart.yaml  values.yaml
charts/zonefile-coredns/templates/: _helpers.tpl  corefile.yaml  daemonset.yaml  serviceaccount.yaml  updater.yaml
charts/zonefile/templates/: _helpers.tpl  deployment.yaml  serviceaccount.yaml
crd-dumper/: Cargo.toml
crd-dumper/src/: main.rs
crd-utils/: Cargo.toml
crd-utils/src/: main.rs
crds/kubi.zone/kubi.zone/v1alpha1/: records.kubi.zone.yaml  zones.kubi.zone.yaml
crds/kubi.zone/v1alpha1/: Record.yaml  Zone.yaml  ZoneFile.yaml
crds/zonefile.kubi.zone/v1alpha1/: ZoneFile.yaml
dnsetes/: Cargo.toml
dnsetes-crds/: Cargo.toml
dnsetes-crds/crds/: dnsrecord.yaml  dnszone.yaml
dnsetes-crds/src/: lib.rs
dnsetes-zonefile/: Cargo.toml
dnsetes-zonefile-crds/: Cargo.toml
dnsetes-zonefile-crds/src/: lib.rs
dnsetes-zonefile/examples/: simple-zonefile.yaml  zonefile.yaml
dnsetes-zonefile/src/: main.rs  reconciliation.rs
dnsetes/examples/: recursive-zones-with-record.yaml  recursive-zones.yaml
dnsetes/src/: fqdn_resolver.rs  main.rs  reconciliation.rs
docs/: index.html  overview.md
docs/v0.1.0/: index.html
docs/v0.1.0/custom-resources/: index.html
docs/v0.1.0/custom-resources/record/: index.html
docs/v0.1.0/custom-resources/zone/: index.html
docs/v0.1.0/custom-resources/zonefile/: index.html
docs/v0.1.0/getting-started/: index.html
docs/v0.1.0/getting-started/installation/: index.html
docs/v0.1.0/getting-started/integrating/: index.html
docs/v0.1.0/getting-started/introduction/: index.html
docs/v0.1.0/getting-started/usage/: index.html
docs/v0.1.0/operators/: index.html
docs/v0.1.0/operators/kubizone/: index.html
docs/v0.1.0/operators/zonefile/: index.html
kubizone/: Cargo.toml
kubizone-crd-utils/: Cargo.toml
kubizone-crd-utils/src/: lib.rs
kubizone-crds/: Cargo.toml
kubizone-crds/src/: lib.rs
kubizone-crds/src/v1alpha1/: dnsrecord.rs  mod.rs  zone.rs
kubizone-zonefile/: Cargo.toml
kubizone-zonefile-crds/: Cargo.toml
kubizone-zonefile-crds/src/: lib.rs
kubizone-zonefile/examples/: longest-matching.yml  simple-zonefile.yaml
kubizone-zonefile/src/: main.rs  reconciliation.rs
kubizone/crds/: Cargo.toml
kubizone/crds/src/v1alpha1/: zone.rs
kubizone/examples/: recursive-zones-with-record.yaml  recursive-zones.yaml
kubizone/src/: main.rs  reconciliation.rs  record.rs  zone.rs
website/: config.toml
website/content/: _index.md
website/content/docs/: _index.md
website/content/docs/controllers/: _index.md  kubizone.md  zonefile.md
website/content/docs/custom-resources/: dnsrecord.md  zone.md  zonefile.md
website/content/docs/getting-started/: _index.md  introduction.md  quick-start.md
website/content/docs/v0.1.0/: _index.md
website/content/docs/v0.1.0/custom-resources/: _index.md  dnsrecord.md  record.md  zone.md  zonefile.md
website/content/docs/v0.1.0/getting-started/: _index.md  installation.md  integrating.md  introduction.md  usage.md
website/content/docs/v0.1.0/operators/: _index.md  kubizone.md  zonefile.md
website/main/: config.toml
website/main/content/: _index.md
website/main/content/docs/: _index.md
website/main/content/docs/controllers/: zonefile.md
website/main/content/docs/custom-resources/: dnsrecord.md
website/main/content/docs/getting-started/: introduction.md
website/main/content/docs/v0.1.0/: _index.md
website/main/content/docs/v0.1.0/controllers/: kubizone.md  zonefile.md
website/main/content/docs/v0.1.0/getting-started/: introduction.md
website/main/themes/adidoks/templates/docs/: page.html  section.html
website/main/themes/adidoks/templates/macros/: docs-sidebar.html
website/themes/adidoks/sass/: _custom.scss
website/themes/adidoks/templates/docs/: section.html
website/v0.1.0/: config.toml
website/v0.1.0/content/docs/: _index.md
website/v0.1.0/content/docs/controllers/: kubizone.md
zonefile/: Cargo.toml
zonefile/crds/: Cargo.toml
zonefile/src/: main.rs  reconciliation.rs
