[package]
name = "crd-dumper"
version = "0.1.0"
edition = "2021"
description = "used for writing yaml-formatted custom resource definitions to crds/"

[dependencies]
kubizone-crds = { path = "../kubizone-crds" }
kube = { version = "0.83.0", default-features = false }
k8s-openapi = { version = "0.18.0", features = ["v1_25"] }
serde_yaml = "0.9.21"
