[package]
name = "crd-utils"
version = "0.1.0"
edition = "2021"
description = "used for writing yaml-formatted custom resource definitions to crds/"

[dependencies]
kube = { workspace = true }
k8s-openapi = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = [] }