[package]
name = "dnsetes-zonefile-crds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dnsetes-crds = { path = "../dnsetes-crds" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96" }
schemars = { version = "0.8.12" }
kube = { version = "0.83.0", default-features = false, features = ["derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_25"] }

[dev-dependencies]
serde_yaml = "0.9.21"
