[package]
name = "dnsetes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dnsetes-crds = { path = "../dnsetes-crds" }
kube = { version = "0.83.0", default-features = false, features = ["derive", "rustls-tls", "client", "runtime"] }
k8s-openapi = { version = "0.18.0", features = ["v1_25"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio = { version = "1.28.2", features = ["macros", "rt"] }
futures = "0.3.17"