[package]
name = "kubizone-crds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96" }
schemars = { version = "0.8.12" }
kube = { workspace = true, features = ["derive", "runtime"] }
k8s-openapi = { workspace = true }