[package]
name = "kubizone"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Utilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
time = "0.3.30"

# Kubernetes
kubizone-crds = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Async
tokio = { workspace = true }
futures =  { workspace = true }

# CLI
clap = { workspace = true }
