[package]
name = "zonefile-crds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kubizone-crds = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
